# librfidx

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CTestRegistration.cmake  README.md  sonar-project.properties
.github/workflows/: build-docs.yml  build.yml
config/: mbedtls_config.h
docs/: .gitignore  Doxyfile.in
include/librfidx/: common.h  rfidx.h
include/librfidx/application/: amiibo.h  amiibo_core.h
include/librfidx/mifare/: mifare_classic.h  mifare_classic_1k.h  mifare_classic_1k_core.h  mifare_common.h
include/librfidx/ntag/: ntag215.h  ntag215_core.h  ntag21x.h  ntag_common.h
src/: common.c  rfidx.c
src/application/: amiibo.c
src/core/: common.c
src/core/application/: amiibo.c
src/core/mifare/: mifare_classic.c  mifare_classic_1k.c
src/core/ntag/: ntag215.c  ntag21x.c
src/ntag/: ntag215.c
src/platform/: main.c  rfidx.c
src/platform/application/: amiibo.c
src/platform/mifare/: mifare_classic_1k.c
src/platform/ntag/: ntag215.c
tests/: test_rfidx.c  test_runner.c
tests/application/: test_amiibo.c  test_application.c
tests/assets/: .gitignore  README.md  mifare-classic-1k-v2.json  mifare-classic-1k-v2.nfc  ntag215.json  ntag215.nfc
tests/mifare/: test_mifare_classic_1k.c
tests/ntag/: test_ntag.c  test_ntag215.c  test_ntag21x.c
